# srt-lab

./: README.md  README_zh-CN.md  package.oo.yaml  pyproject.toml
.claude/: settings.local.json
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/test-audio-to-srt/: .flow.ui.oo.json  flow.oo.yaml
flows/test-extract-segment/: .flow.ui.oo.json  flow.oo.yaml
flows/test-srt-translation/: flow.oo.yaml
oo-locales/: en.json  zh-CN.json
subflows/video-subtitles/: .subflow.ui.oo.json  subflow.oo.yaml
tasks/audio-to-srt/: __init__.py  task.oo.yaml
tasks/extract-vocal-audio-segment/: __init__.py  task.oo.yaml
tasks/srt-translation/: __init__.py  task.oo.yaml
